update to initial website version

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,7 @@ $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
 
 $white-color: #ffffff !default;
+$beige-white-color: #fffdfa !default;
 $black-color: #000000 !default;
 
 // Theme colors
