--- a/_includes/resume/certificates.liquid
+++ b/_includes/resume/certificates.liquid
@@ -26,7 +26,15 @@
             <td class="list-group-name">
               <b>{{ content.issuer }}</b>
             </td>
-            <td class="list-group-name">{{ content.date }}</td>
+            <td class="list-group-name">
+              {% if content.date %}
+                {% assign date_parts = content.date | split: '-' %}
+                {% assign formatted_date = date_parts[1] | append: '/' | append: date_parts[0] %}
+                {{ formatted_date }}
+              {% else %}
+                {{ content.date }}
+              {% endif %}
+            </td>
           </tr>
         </tbody>
       </table>
