--- a/_includes/resume/experience.liquid
+++ b/_includes/resume/experience.liquid
@@ -5,9 +5,17 @@
       <div class="row">
         <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
           {% if content.startDate %}
-            {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
-            {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
-            {% assign date = startDate | append: ' - ' %}
+            {% if content.startDate %}
+              {% assign start_parts = content.startDate | split: '-' %}
+              {% assign startDate = start_parts[1] | append: '/' | append: start_parts[0] %}
+            {% endif %}
+            {% if content.endDate %}
+              {% assign end_parts = content.endDate | split: '-' %}
+              {% assign endDate = end_parts[1] | append: '/' | append: end_parts[0] %}
+            {% else %}
+              {% assign endDate = 'Present' %}
+            {% endif %}
+              {% assign date = startDate | append: ' - ' %}
             {% assign date = date | append: endDate %}
           {% else %}
             {% assign date = '' %}
@@ -34,9 +42,9 @@
         </div>
         <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
           <h6 class="title font-weight-bold ml-1 ml-md-4">
-            <a href="{{ content.url }}">{{ content.position }}</a>
+            {{ content.position }}
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.name }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;"><i class="fa-solid fa-building-columns iconlocation"></i> {{ content.name }}</h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
           <ul class="items">
             {% for item in content.highlights %}
