--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -88,15 +88,15 @@ layout: default
           {% if data[0] == 'meta' or data[1].size == 0 %} {% continue %} {% endif %}
           <a class="anchor" id="{{ data[0] }}"></a>
           <div class="card mt-3 p-3">
-            <h3 class="card-title font-weight-medium">{{ data[0] | capitalize }}</h3>
+            {% assign section_title = data[0] %}<h3 class="card-title font-weight-medium">{% include titlecase.liquid text=section_title %}</h3>
             <div>
               {% case data[0] %}
-                {% when 'basics' %}
-                  {% include resume/basics.liquid %}
+                {% when 'general information' %}
+                  {% include resume/general.liquid %}
                 {% when 'education' %}
                   {% include resume/education.liquid %}
-                {% when 'work' %}
-                  {% include resume/work.liquid %}
+                {% when 'professional experience' %}
+                  {% include resume/experience.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
                 {% when 'projects' %}
@@ -109,7 +109,7 @@ layout: default
                   {% include resume/publications.liquid %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
-                {% when 'interests' %}
+                {% when 'research interests' %}
                   {% include resume/interests.liquid %}
                 {% when 'certificates' %}
                   {% include resume/certificates.liquid %}
