--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -198,7 +198,7 @@ ul.task-list input[type="checkbox"] {
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
+    font-family: "Segoe UI";
 
     p {
       display: inline-block;
@@ -401,7 +401,11 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
 
     a {
       img {
@@ -1354,7 +1358,7 @@ figure.cover {
   }
 
   figcaption.abandoned {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #ee5f5b;
@@ -1362,28 +1366,28 @@ figure.cover {
 
   figcaption.finished,
   figcaption.watched {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #62c462;
   }
 
   figcaption.interested {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #7691db;
   }
 
   figcaption.paused {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #bdac7e;
   }
 
   figcaption.queued {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #9e76b5;
@@ -1391,7 +1395,7 @@ figure.cover {
 
   figcaption.reading,
   figcaption.watching {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #f89406;
@@ -1399,14 +1403,14 @@ figure.cover {
 
   figcaption.reread,
   figcaption.rewatch {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #a6517d;
   }
 
   figcaption.uncategorized {
-    font-family: monospace;
+    font-family: "Segoe UI";
     color: #23212d;
     text-transform: uppercase;
     background-color: #b0abb3;
