--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -13,9 +13,9 @@
   --global-theme-color: #{$custom-theme-color};
   --global-hover-color: #{$custom-theme-color};
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$grey-color-dark};
-  --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-bg-color: #{$footer-color};
+  --global-footer-text-color: #{$black-color};
+  --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
   --global-card-bg-color: #{$white-color};
