--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,6 +29,7 @@ $grey-color: #828282 !default;
 $grey-color-light: color.adjust($grey-color, $lightness: 40%);
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
+$footer-color: #eeeeee !default;
 
 $white-color: #ffffff !default;
 $beige-white-color: #fffdfa !default;
